--- a/reportCard.css
+++ b/reportCard.css
@@ -5,134 +5,129 @@
 */
 /*Don't break between graded */
 @media print {
-    div {page-break-inside: avoid;}
-    html,body {
+    div {
+        page-break-inside: avoid;
+    }
+
+    html, body {
         margin: 0;
     }
 }
 
 
- .grid-container {
-            display: grid;
-            grid-template-areas:
+.grid-container {
+    display: grid;
+    grid-template-areas:
                     'title title title title  title'
                     'q1 q2 q3 q4 y1'
                     'q1grade q2grade q3grade q4grade y1grade'
                     'q1absent q2absent q3absent q4absent y1absent'
                     'q1comment q1comment q1comment q1comment q1comment'
                     'q2comment q2comment q2comment q2comment q2comment';
-        'q3comment q3comment q3comment q3comment q3comment';
-        'q4comment q4comment q4comment q4comment q4comment';
-        'y1comment y1comment y1comment y1comment y1comment';
-            column-gap: 10px;
-        }
+'q3comment q3comment q3comment q3comment q3comment';
+'q4comment q4comment q4comment q4comment q4comment';
+'y1comment y1comment y1comment y1comment y1comment';
+    column-gap: 10px;
+}
 
-        .grid-item {
-            background-color: rgba(255, 255, 255, 0.8);
-            border: 1px solid rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            font-size: 30px;
-            text-align: center;
-        }
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+}
 
-        .course-title {
-            grid-area: title;
-        }
+.course-title {
+    grid-area: title;
+}
 
-        .q1 {
-            grid-area: q1;
-        }
+.q1 {
+    grid-area: q1;
+}
 
-        .grade-q1 {
-            grid-area: q1grade;
-        }
+.grade-q1 {
+    grid-area: q1grade;
+}
 
-        .absent-q1 {
-            grid-area: q1absent;
-        }
+.absent-q1 {
+    grid-area: q1absent;
+}
 
-        .comments-q1 {
-            grid-area: q1comment;
-        }
+.comments-q1 {
+    grid-area: q1comment;
+}
 
-        .q2 {
-            grid-area: q2;
-        }
+.q2 {
+    grid-area: q2;
+}
 
-        .comments-q2 {
-            grid-area: q2comment;
-        }
+.comments-q2 {
+    grid-area: q2comment;
+}
 
-        .grade-q2 {
-            grid-area: q2grade;
-        }
+.grade-q2 {
+    grid-area: q2grade;
+}
 
-        .absent-q2 {
-            grid-area: q2absent;
-        }
+.absent-q2 {
+    grid-area: q2absent;
+}
 
 
+.q3 {
+    grid-area: q3;
+}
 
-        .q3 {
-            grid-area: q3;
-        }
+.grade-q3 {
+    grid-area: q3grade;
+}
 
-        .comment-q3 {
-            grid-area: q3comment;
-        }
+.absent-q3 {
+    grid-area: q3absent;
+}
 
-        .q3grade {
-            grid-area: q3grade;
-        }
+.comments-q3 {
+    grid-area: q3comment;
+}
 
-        .q3absent {
-            grid-area: q3absent;
-        }
+.q4 {
+    grid-area: q4;
+}
 
-        .q3comment {
-            grid-area: q3comment;
-        }
 
-        .q4 {
-            grid-area: q4;
-        }
+.grade-q4 {
+    grid-area: q4grade;
+}
 
-        .q4comment {
-            grid-area: q4comment;
-        }
+.absent-q4 {
+    grid-area: q4absent;
+}
 
-        .q4grade {
-            grid-area: q4grade;
-        }
+.comments-q4 {
+    grid-area: q4comment;
+}
 
-        .q4absent {
-            grid-area: q4absent;
-        }
+.y1 {
+    grid-area: y1;
+}
 
-        .q4comment {
-            grid-area: q4comment;
-        }
 
-        .y1 {
-            grid-area: y1;
-        }
+.grade-y1 {
+    grid-area: y1grade;
+}
 
-        .comments-y1 {
-            grid-area: y1comment;
-        }
+.absent-y1 {
+    grid-area: y1absent;
+}
 
-        .grade-y1 {
-            grid-area: y1grade;
-        }
-
-        .absent-y1 {
-            grid-area: y1absent;
-        }
-
+.comments-y1 {
+    grid-area: y1comment;
+}
 
 body {
     -webkit-font-smoothing: antialiased;
-    font: normal .8764em/1.5em Arial,Verdana,sans-serif;
+    font: normal .8764em/1.5em Arial, Verdana, sans-serif;
     margin: 0;
     padding: 5em;
 }
@@ -199,13 +194,13 @@ h6 {
     margin: 1.5em 0;
 }
 
-body,p,td,div {
+body, p, td, div {
     color: #111;
     font-family: "Helvetica Neue", Helvetica, Arial, Verdana, sans-serif;
     word-wrap: break-word;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6 {
     line-height: 1.5em;
 }
 
@@ -242,11 +237,11 @@ li > p:first-child {
     margin: 0;
 }
 
-ul ul,ul ol {
+ul ul, ul ol {
     margin-bottom: .4em;
 }
 
-caption,col,colgroup,table,tbody,td,tfoot,th,thead,tr {
+caption, col, colgroup, table, tbody, td, tfoot, th, thead, tr {
     border-spacing: 0;
 }
 
@@ -271,10 +266,9 @@ table {
     margin: -1px 0 23px;
     padding: 0;
     table-layout: fixed;
-    width:100%;
+    width: 100%;
 
 }
-
 
 
 col {
@@ -297,37 +291,37 @@ thead {
     display: table-header-group;
 }
 
-td,th {
+td, th {
     display: table-cell;
-    width:25%;
-    border:1px solid black;
+    width: 25%;
+    border: 1px solid black;
     border-style: solid;
 }
 
 tr {
     display: table-row;
-    width:100%;
+    width: 100%;
 }
 
-table th,table td {
+table th, table td {
     font-size: 10pt;
     /*line-height: 23px;*/
     padding: 0 1em;
-    width:100%;
+    width: 100%;
 
 }
 
 table thead {
-    background: rgba(0,0,0,0.15);
+    background: rgba(0, 0, 0, 0.15);
     border: 1px solid black;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     /*width:100%;*/
 }
 
 table tbody {
     /* background: rgba(0,0,0,0); */
-    background: rgba(255,255,255,255);
-    border:1px solid black;
+    background: rgba(255, 255, 255, 255);
+    border: 1px solid black;
     vertical-align: text-top;
     /*width:100%;*/
 }
@@ -336,24 +330,25 @@ table tbody {
 /*Comments */
 
 .comments {
-    width:100%;
+    width: 100%;
 }
+
 .cbodyterm {
     vertical-align: text-top;
-    width:6em;
+    width: 6em;
 }
 
 .cbodytext {
     /* background: rgba(0,0,0,0); */
-    border:1px dashed black;
+    border: 1px dashed black;
 }
 
 /* end comments */
 
 table tfoot {
-    background: rgba(0,0,0,0.15);
-    border: 1px solid rgba(0,0,0,0.15);
-    border-top: 1px solid rgba(0,0,0,0.2);
+    background: rgba(0, 0, 0, 0.15);
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 
@@ -363,7 +358,7 @@ blockquote p {
     line-height: 1.6em;
 }
 
-sup,sub,a.footnote {
+sup, sub, a.footnote {
     font-size: 1.4ex;
     height: 0;
     line-height: 1;
@@ -376,24 +371,24 @@ sub {
     top: -1px;
 }
 
-p,h5 {
+p, h5 {
     font-size: 1.1em;
     line-height: 1.3125em;
     margin: 1.3125em 0;
 }
 
-dt,th {
+dt, th {
     font-weight: 700;
     vertical-align: top;
 
 }
 
-table tr:nth-child(odd),table th:nth-child(odd),table td:nth-child(odd) {
-    background: rgba(255,255,255,0.06);
+table tr:nth-child(odd), table th:nth-child(odd), table td:nth-child(odd) {
+    background: rgba(255, 255, 255, 0.06);
 }
 
-table tr:nth-child(even),table td:nth-child(even) {
-    background: rgba(255,255,255,0.25);
+table tr:nth-child(even), table td:nth-child(even) {
+    background: rgba(255, 255, 255, 0.25);
 }
 
 @media print {
@@ -401,7 +396,7 @@ table tr:nth-child(even),table td:nth-child(even) {
         overflow: auto;
     }
 
-    img,pre,blockquote,table,figure,p {
+    img, pre, blockquote, table, figure, p {
         page-break-inside: avoid;
     }
 
@@ -416,7 +411,7 @@ table tr:nth-child(even),table td:nth-child(even) {
 }
 
 @media screen {
-    .inverted #wrapper,.inverted {
+    .inverted #wrapper, .inverted {
         background: rgba(37, 42, 42, 1);
     }
 
@@ -424,11 +419,11 @@ table tr:nth-child(even),table td:nth-child(even) {
         border-color: rgba(51, 63, 64, 1) !important;
     }
 
-    .inverted p,.inverted td,.inverted li,.inverted h1,.inverted h2,.inverted h3,.inverted h4,.inverted h5,.inverted h6,.inverted pre,.inverted code,.inverted th,.inverted .math,.inverted caption,.inverted dd,.inverted dt {
+    .inverted p, .inverted td, .inverted li, .inverted h1, .inverted h2, .inverted h3, .inverted h4, .inverted h5, .inverted h6, .inverted pre, .inverted code, .inverted th, .inverted .math, .inverted caption, .inverted dd, .inverted dt {
         color: #eee !important;
     }
 
-    .inverted table tr:nth-child(odd),.inverted table th:nth-child(odd),.inverted table td:nth-child(odd) {
+    .inverted table tr:nth-child(odd), .inverted table th:nth-child(odd), .inverted table td:nth-child(odd) {
         background: none;
     }
 
@@ -441,7 +436,7 @@ table tr:nth-child(even),table td:nth-child(even) {
     }
 
     ::selection {
-        background: rgba(157, 193, 200,.5);
+        background: rgba(157, 193, 200, .5);
     }
 
     h1::selection {
@@ -452,29 +447,29 @@ table tr:nth-child(even),table td:nth-child(even) {
         background-color: rgba(90, 182, 224, .3);
     }
 
-    h3::selection,h4::selection,h5::selection,h6::selection,li::selection,ol::selection {
+    h3::selection, h4::selection, h5::selection, h6::selection, li::selection, ol::selection {
         background-color: rgba(133, 201, 232, .3);
     }
 
     code::selection {
-        background-color: rgba(0,0,0,.7);
+        background-color: rgba(0, 0, 0, .7);
         color: #eee;
     }
 
     code span::selection {
-        background-color: rgba(0,0,0,.7) !important;
+        background-color: rgba(0, 0, 0, .7) !important;
         color: #eee !important;
     }
 
     a::selection {
-        background-color: rgba(255, 230, 102,.2);
+        background-color: rgba(255, 230, 102, .2);
     }
 
     .inverted a::selection {
-        background-color: rgba(255, 230, 102,.6);
+        background-color: rgba(255, 230, 102, .6);
     }
 
-    td::selection,th::selection,caption::selection {
+    td::selection, th::selection, caption::selection {
         background-color: rgba(180, 237, 95, .5);
     }
 }
