--- a/reportCard.css
+++ b/reportCard.css
@@ -14,6 +14,15 @@
     }
 }
 
+.main-container{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+       border-collapse: collapse;
+    border-style: none;
+    /*empty-cells: hide;*/
+    padding: 0;
+    grid-row-gap: 2em;
+}
 
 .grid-container {
     display: grid;
